--- a/vagrant-network/.envrc.example
+++ b/vagrant-network/.envrc.example
@@ -1,2 +1,6 @@
 export VAGRANT_BOX_BRIDGE_INTERFACE=enp2s0
 export VAGRANT_BOX_STATIC_IP=192.168.1.101
+
+export OPENNMS_IP=192.168.1.85
+export OPENNMS_NETFLOW_PORT=4729
+
