--- a/vagrant-network/Vagrantfile
+++ b/vagrant-network/Vagrantfile
@@ -70,6 +70,8 @@ Vagrant.configure("2") do |config|
     apt-get update -y
 
     ./provision-bash.sh
+    ./provision-java.sh
+    ./provision-ammonite.sh
     ./provision-tools.sh
     ./provision-snmp.sh
     ./provision-pmacct.sh
