--- a/vagrant-network/Vagrantfile
+++ b/vagrant-network/Vagrantfile
@@ -74,6 +74,7 @@ Vagrant.configure("2") do |config|
     ./provision-ammonite.sh
     ./provision-tools.sh
     ./provision-snmp.sh
+    ./provision-iperf.sh
     ./provision-pmacct.sh
 
     duration=$SECONDS
